# atmega644pa

./: .gitignore  AMG8853.h  CMakeLists.txt  GccBoardProject1.componentinfo.xml  GccBoardProject1.cproj  IncFile1.h  README.md  RS485.c  RS485.h  base.h  functions.h  htu21d.h  i2c_master.h  iom644pa.h  main.c  sc18is600.h  sc18is600_arch.h
Debug/: GccBoardProject1.elf  GccBoardProject1.hex  GccBoardProject1.lss  GccBoardProject1.map  GccBoardProject1.srec  Makefile
Debug/src/: main.d
Debug/src/ASF/common/boards/user_board/: init.d
VSIX/: extension.xdkmanifest
src/: IncFile1.h  main.c
